2006-05-04  Mark D. Baushke  <mdb@gnu.org>

	* filesubr.c (cvs_temp_file): Avoid keeping pointers to free()'d
	storage laying around.
	* commit.c (commit): Handle possible NULL filename values
	returned from cvs_temp_file().
	* filesubr.c (cvs_temp_name): Ditto.
	* import.c (import): Ditto.
	* login.c (password_entry_operation): Ditto.
	* logmsg.c (do_verify): Ditto.
	* patch.c (patch_fileproc): Ditto.
	[Fixes NetBSD coverity cid-2545.]

	* buffer.c (packetizing_buffer_output): Initialize outdata.
	[Fixes NetBSD coverity cid-2474.]

	* server.c (server_updated): Check for NULL return from
	findnode_fn(). [Fixes NetBSD coverity cid-1352.]

2006-04-19  Larry Jones  <lawrence.jones@ugs.com>

	* history.c (sort_order): Back out previous change - not needed.

2006-04-15  Larry Jones  <lawrence.jones@ugs.com>

	* history.c (sort_order): Add prototype.
	* server.c (template_proc): Add prototype and make args const.
	* update.c (RegisterMerge): Make static to match prototype.

2006-04-07  Derek Price  <derek@ximbiot.com>

	* client.c (strto_file_size): New function which checks for errors when
	parsing protocol input.
	(read_counted_file, update_entries, handle_mbinary): Use new function.
	Remove FIXME.
	(Thanks to a report from Brendan Harrison
	<brendan.harrison@klocwork.com>.)

	* client.c (send_a_repository): Add assertion.
	(Thanks to an incorrect report from Brendan Harrison
	<brendan.harrison@klocwork.com>.)

2006-04-06  Derek Price  <derek@ximbiot.com>

	* filesubr.c (last_component, expand_wild), rcs.c (RCS_deltas,
	RCS_rewrite), server.c (server_checked_in): Add assertions.
	(Thanks to an incorrect report from Brendan Harrison
	<brendan.harrison@klocwork.com>.)

2006-03-31  Mark D. Baushke  <mdb@gnu.org>

	* cvsrc.c (read_cvsrc): Deal with \r\n (DOS) line endings in
	.cvsrc files.

2006-03-07  Derek Price  <derek@ximbiot.com>

	* tag.c (rtag_proc): Search the Attic when -F is used.
	* sanity.sh (tests): Run death-rtag.
	(death-rtag): Expect success.
